--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
 
-  <section class="page-hero" style="background: linear-gradient(180deg, rgba(139, 92, 246, 0.08) 0%, rgba(244, 114, 182, 0.06) 40%, rgba(139, 92, 246, 0.03) 70%, rgba(139, 92, 246, 0.015) 85%, transparent 100%);">
+  <section class="page-hero" style="background: linear-gradient(180deg, rgba(139, 92, 246, 0.08) 0%, rgba(244, 114, 182, 0.06) 50%, rgba(139, 92, 246, 0.03) 100%);">
     <div class="hero-bg"></div>
     <div class="container">
       <div class="page-hero-content">
